refactor: configs commands